# pyDash_soapysdr_gui

./: README.md
dev/: pyproject.toml
dev/src/pyFmRadio-master/: pyFmRadio.py  rds.py
dev/src/soapySDR/: README.TXT  SDRConfigs.py  SDRcommands.py  SoapySDR.py  app.config.toml  general_functions.py  logit.py  logtofile.py  main.py  requirements.txt  simplysoap.py  soap_mp.py  soundstart.sh  startSDR.py
dev/src/soapySDR/assets/: tab.css  tabology.css-old  tabs.css  textarea.css  tooltip.scc  typography.css  up.css
dev/src/soapySDR/pages/: callbacks_dashboard.py  config.toml  layout_dashboard.py  layout_dashboard.py-good  layout_dashboard.py-old  layout_dashboard.py-orig  layout_dashboard_dbc.py  layout_dbc.py-old  page2.py
dev/src/soapySDR/pages/logs/: callbacks_logs.py  layout_logs.py  layout_logs_dbc.py
