[tool.poetry]
name = "dash-gui-radio-dev"
version = "0.1.0"
description = "Dash Gui For RTLSDR"
authors = ["chrid clark"]
license = "gpl"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
# dash = ">=2.7"
dash = "*"
#dash-bootstrap-components = ">=1.2.1, <2"
dash-bootstrap-components = "*"
dash-daq = "*"
# dbus-python = "^1.2.18"
flask-loguru = ">=1.0.0, <2"
gunicorn = "^20.1.0"
loguru = "*"
mysqlclient = ">=2.1.1, <2.2"
python-telegram-bot = "^13.7"
pyrtlsdr = ">=0.2.92, <1"
pymysql_sa = ">=1.0, <2"
psutil = "^5.8.0"
plyer = "^2.0.0"
mariadb = "*"
numpy = "*"
pandas = "*"
refurb = "^1.2.0"
sqlmodel = "*"
SQLAlchemy = "*"
sqlacodegen = "^2.3.0"
shared-memory-dict = "^0.7.2"
thefuzz = {extras = ["speedup"], version = "^0.19.0"}
toml-config = "^0.1.3"
toml = "^0.10.2"
waitress = "*"
tomli = "^2.0.1"
loguru-mypy = "^0.0.4"
flask = "^2.2.3"
peakutils = "^1.3.4"
flask-socketio = "^5.3.3"
2to3 = "^1.0"
pyaudio = "^0.2.13"
scipy = "*"
simpleaudio = "^1.0.4"
sounddevice = "*"
soundfile = "^0.12.1"
matplotlib = "^3.7.1"
keyboard = "^0.13.5"
# dash-mantine-components = "^0.12.1"
dash-mantine-components = "*"
ffmpeg-python = "^0.2.0"
asyncstdlib = "^3.10.7"
async-class = "^0.5.0"
wavefile = "^1.5"
wavfile = "^4.7.0"
pydub = "^0.25.1"
pyzo = "^4.12.7"
websockets = "^11.0.3"
redis = {extras = ["hiredis"], version = "^4.6.0"}
rq = "^1.15.1"
trio = "^0.22.2"
mpire = {extras = ["dashboard"], version = "^2.7.1"}
radio-core = "*"
beepy = "^1.0.7"
chime = "^0.7.0"
pybeep = "^0.0.4"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
blinker = "^1.6.2"
pika = "^1.3.2"
xlrd = "^2.0.1"
ultradict = "^0.0.6"
pyflowchart = "^0.3.1"
pipx = "^1.4.1"
ndsharray = "^1.1.1"
types-waitress = "^3.0.0.20240423"
vulture = "^2.11"

[tool.poetry.dev-dependencies]
black = "*"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^7.1.2"
mkdocs = "^1.3.0"
mkdocs-material = "^8.3.8"
mkdocstrings = "^0.18.1"
mypy = "^0.981"
# spyder = "^5.3.2"

[tool.poetry.group.dev.dependencies]
spyder-kernels = "^2.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
exclude = [
    '\.venv',
    'tests'
]

[tool.black]
line-length = 79
include = '\.pyi?$'
target-version = ['py312']
fast = true
exclude = '''
(
  /(                        # exclude a few common directories in the
    \.git                   # root of the project
    | \.pytest_cache
    | python-venv
    | \.venv
    | build
    | dist
    | \.tox
  ))
'''


